--- a/paper.tex
+++ b/paper.tex
@@ -79,51 +79,91 @@ Our primary goal has been to make an interface which simplifies orchestration so
 Here we discuss the design of the yaq ecosystem.
 Several case studies provide a view in to the flexible ways that yaq can be applied to perform very different scientific experiments.
 
-\section{Accessibility to Automate}
-
 Complex instrumentation is often driven with custom orchestration software written in LabVIEW or Python.
 This software is powerful, but in our experience it often fails to capture all of the unique hardware.
 Scientists find themselves using multiple pieces of software, some developed by manufacturers and some developed in-house, to control their instrument in a piecemeal way.
 Often, there is no single location where a scientist can address all of their hardware in a fully automated fashion.
 This lack of accessibility to automate limits experimental throughput and creativity, increasing the complexity of the user experience.
 
-We describe three major barriers to implementing full automation of custom instrumentation.
+
+\section{Hardware Interface Challenges}
+
+Hardware-software interface design presents several technical challenges.
+In this section we describe the architecture of the \yaq{} framework in light of three major barriers that we have encountered in scientific instrumentation development.
 First barrier: Multiple incompatible protocols are used to communicate with each component of the system.
 A fully automated system must be able to use all of these protocols, a daunting task for scientists who do not specialize in software development\cite{}.
-Second barrier: Certain specialty hardware require particular hardware and software requirements.
+Second barrier: Certain specialty hardware have inconvenient interface requirements.
 A specialty camera will only work with an ISA card and drivers for Windows XP.
 A data acquisition manufacturer provides an API that only works in Python 3.7.
 A graduate student wishes to drive some stepper motor using a Raspberry Pi.
-These examples are representative of the challenging barriers that most automation systems have no avenue to address.
 Third barrier: Some hardware interfaces are blocking.
-A LabVIEW interface freezes communication with motors while waiting for a camera to collect data.
+A graphical user interface while waiting for a camera to collect data.
 Custom orchestration software needs to be closed before the manufacturers configuration software can be used.
 A graduate student finds themself needing to master advanced concepts in concurrency in order to orchestrate many motors performantly.
 
 \begin{figure}
+	\includegraphics[width=\columnwidth]{figures/network}
 \caption{\label{fig:network} Networking diagram}
 \end{figure}
 
-\yaq{} defines a new network-based protocol which addresses these three barriers.
-Figure \ref{fig:network} ...
+Figure \ref{fig:network} diagrams the \yaq{} architecture.
+Here we show three different computers connected via an ethernet network.
+The top and bottom computer are connected to monitors for interactive use while the middle computer is only accessible via the network.
+This might represent a complex scientific instrument involving several operator terminals as well as embedded computers.
+At the top, a single computer is connected to four hardware peripherals through RS232, TTL, USB, and PCI as indicated by the colored lines.
+That same computer is running four separate programs, one for each peripheral.
+These small, targeted, programs are managed by the operating system and run in the background.
+It is conventional to call such programs ``daemons''\cite{}.
+The middle computer is connected two two additional peripherals, and runs daemons for each.
+Besides communicating with the hardware peripheral, each daemon can communicate with other programs, ``clients'',  through the network.
+The four client programs shown in Figure \ref{fig:network} can each communicate with all six hardware peripherals shown.
+As an example, a client running on the bottom computer could communicate with the RS232 peripheral shown in green via the following path: client $\leftrightarrow$ network switch $\leftrightarrow$ top computer $\leftrightarrow$ daemon $\leftrightarrow$ hardware peripheral.
+This powerful architecture can scale down to single computers or up to many computers, including fully remote operator interfaces.
+As we will show, usage of standards and the creation of tooling makes this architecture accessible to instrument builders.
 
-Like EPICS and TANGO, the \yaq{} protocol is client-server network based.
-To communicate with a given piece of hardware, a client connects to a particular TCP port either locally or to a remote machine over the network.
-Clients can connect to many TCP ports and each TCP port can simultaneously communicate with many clients.
+In \yaq{}, communication between daemons and clients is performed over TCP/IP using a protocol called Apache Avro RPC \cite{AvroSpecification}.
+Avro provides an agreed upon standard for efficient serialization of data and method calls from a remote (client) process.
+Practically, the \yaq{} interface looks like a collection of methods or functions, which Avro calls ``messages''.
+Each message has defined input parameters and output return types.
+A sensor might implement a message called ``\texttt{get\_measured}'' which takes no parameters and returns a dictionary mapping channel names to numeric or array data.
+A motor would implement a pair of messages for setting and reading back the motor position: ``\texttt{set\_position(float position)} $\rightarrow$ \texttt{null} '' and ``\texttt{get\_position()} $\rightarrow$ \texttt{float}''.
+These self describing messages make up the lowest level functionality of the \yaq{} interface.
+Each individual communication between client and daemon involves one message being requested by the client and the response returned from the daemon.
+Each daemon supports a collection of messages for its unique functionality, called the ``protocol''.
 
-Daemon A might support a motor, daemon B a sensor, and daemon C a light source.
-To do an experiment, a control program (a "client") must send commands to each of these daemons.
-Each of the daemons is a separate application running in its own process, and importantly the client is also a separate application.
-Since the traffic over the network is standardized, yaq daemons and clients can be written in any programming language.
-The reference implementation is provided in Python [CITE].
+\yaq{} introduces a concept called ``Traits'' which are collections of related messages that are shared among multiple protocols.
+Motors implement the ``has-position'' trait, which defines ``\texttt{set\_position}'', ``\texttt{get\_position}'', and ``\texttt{get\_units}''.
+Sensors would implement the ``is-sensor'' trait which defines ``\texttt{get\_measured}'', ``\texttt{get\_channel\_names}'', and ``\texttt{get\_channel\_units}''. 
+Protocols which implement a trait must support all of the messages from the trait.
+Importantly, specific protocols can also implement arbitrary additional messages that are not defined by any trait.
+
+The first hardware interface barrier: Multiple incompatible protocols are used to communicate with each component of the system.
+\yaq{} provides a unified TCP/IP interface to all hardware peripherals based on the well-described Avro RPC protocol.
+In particular, the trait system was introduced in pursuit of our primary goal of easing the client development process.
+Clients can trust that protocols that implement a given trait will behave in similar ways.
+
+The second hardware interface barrier: Certain specialty hardware have inconvenient interface requirements.
+Since \yaq{} enables multiple machines, any hardware requirements can be addressed by putting a machine for that specific hardware on the network.
+For example, the Windows XP computer which has the interface card and drivers can be placed into a private network with only \yaq{} interface communication.
+Because each \yaq{} daemon is running in its own process, the software environment can be tailored to its needs.
+A client running up to date Python 3.10 communicates seamlessly with a daemon running Python 3.7.
+
+The third hardware interface barrier: Some hardware interfaces are blocking.
+Each \yaq{} daemon runs as a separate process (possibly not even on the same machine) and so many of the hard concurrency problems with communicating with hardware are mitigated.
+It is expected that each message call over the \yaq{} interface will return rapidly, ensuring that client applications are not blocked for extended periods of time.
+This principle applies even when the message starts an action that might take several seconds to complete, such as homing a motor or initiating a measurement for a sensor.
+In these instances, the initial message simply starts the action and returns, with a separate message provided to retrieve results when they exist.
+In order to know how long to wait, the ``is-daemon`` trait provides a message called ``is\_busy'' which should return "true" while the long running action is not complete, and "false" once it is finished.
+Additionally, multiple clients can communicate with the same daemon simultaneously.
+A complex instrument may involve multiple operators watching sensor data in real time, while one program is orchestrating the hardware and recording the data.
+
 
 \section{Experimental Flexibility}
 
 Existing experimental orchestration software is often highly inflexible.
-A laser lab needs to spend weeks on software development when introducing a single new motor into their experimental procedure.
-A researcher needs to shut down an entire instrument when debugging the details of a particular serial interface.
+An experimentalist will spend many hours in lab repeating acquisitions because it is too challenging to add repetition functionality to their software.
+A laser lab needs to spend weeks on software development when introducing a single new step into their experimental procedure.
 Researchers are disappointed to realize that they are forced to start from scratch when developing software for a similar instrument built with trivially different hardware.
-An experimentalist will spend many hours in lab to do trivial tasks such as repeated acquisitions because their software does not support repetition and it is too challenging to add the functionality.
 
 In our view, software inflexibility is a natural consequence of the typical software development practices used by custom instrument builders.
 Instrumental software is often built as one monolithic program that does everything from providing a graphical interface, through hardware interfacing, and writing data files.
@@ -134,75 +174,55 @@ The orchestration routines are intimately tied to the particular hardware config
 
 
 Unique experiments will always need custom orchestration and user experience.
-We believe that novel instrumentation development naturally and necessarily includes the creation of targeted user interfaces.
-\yaq{} is architected to encourage better software development practices when creating such interfaces.
+We believe that novel instrumentation development naturally and necessarily includes the creation of targeted software.
+\yaq{} is architected to encourage better software development practices when creating such programs.
 In a \yaq{} context, orchestration code and graphical control interfaces are implemented as clients.
-These clients are automatically simpler because they only need to implement the \yaq{} protocol and do not need to include the vast array of hardware-specific communication protocols.
-Beyond this, the \yaq{} protocol is standardized to provide a common interface for similar hardware.
+These clients are automatically simpler because they only need to implement the \yaq{} interface and do not need to include the vast array of hardware-specific communication protocols.
+Beyond this, clients can use traits to interact with similar hardware identically.
 A client written to perform a two dimensional fluorescence experiment using two Acton monochromators will also work with Horiba monochromators without any modification.
 
-Apache Avro RPC \cite{AvroSpecification} is used to structure the \yaq{} protocol.
-Avro RPC is a Remote Procedure Call framework which allows interprocess communication between a client application and a daemon (the server) which has direct hardware access.
-Avro provides an agreed upon standard for efficient serialization of data and method calls from a remote (client) process.
-Practically, the \yaq{} protocol looks like a collection of methods or functions, which Avro calls ``messages''.
-Each message has defined input parameters and output return types.
-A sensor might implement a message called ``\texttt{get\_measured}'' which takes no parameters and returns a dictionary mapping channel names to numeric or array data.
-A motor would implement a pair of messages for setting and reading back the motor position: ``\texttt{set\_position(float position)} $\rightarrow$ \texttt{null} '' and ``\texttt{get\_position()} $\rightarrow$ \texttt{float}''.
-These self describing messages make up the lowest level functionality of the \yaq{} protocol.
-
-yaq's RPC design invites the creation of multiple client libraries specialized for specific purposes.
-For a yaq instrument it is normal to have multiple clients running simultaneously, each focused on a particular purpose.
-This modularity speeds development and increases overall flexibility of the system.
-
-
-\yaq{} introduces a concept called ``Traits'' which are collections of related messages that are shared among multiple protocols.
-Motors implement the ``has-position'' trait, which defines ``\texttt{set\_position}'', ``\texttt{get\_position}'', and ``\texttt{get\_units}''.
-Sensors would implement the ``is-sensor'' trait which defines ``\texttt{get\_measured}'', ``\texttt{get\_channel\_names}'', and ``\texttt{get\_channel\_units}''. 
-Protocols which implement a trait must support all of the messages from the trait.
-The trait system was introduced in pursuit of our primary goal of easing the client development process.
-Clients can trust that protocols that implement a given trait will behave in similar ways.
-Importantly, specific protocols can also implement arbitrary additional messages that are not defined by any trait.
-
-The yaq ecosystem is optimized for ease of writing client applications.
-As such, it is expected that each method call over the yaq interface will return rapidly, ensuring that client applications are not blocked for extended periods of time.
-This principle applies even when the method starts an action that might take several seconds to complete, such as homing a motor or initiating a measurement for a sensor.
-In these instances, the initial method simply starts the action and returns, with a separate method provided to retrieve results if they exist.
-In order to know how long to wait, the ``is-daemon`` trait provides a method called ``is\_busy'' which should return "true" while the long running action is not complete, and "false" once it is finished.
-
-Several general purpose \yaq{} clients exist.
-\texttt{yaqc}\cite{} is a lightweight Python client which is excellent for using in scripts or any other Python program.
-\texttt{yaqc-qtpy}\cite{} is a graphical application which builds interactive controls based on traits for any conceivable \yaq{} protocol.
-\texttt{yaqc-bluesky}\cite{} provides a bridge to the Bluesky ecosystem\cite{}.
-Bluesky provides a powerful orchestration layer for conducting and recording data for a wide variety of experimental procedures.
-Similar translation layers could be built for a variety of orchestration layers such as PyMoDAQ\cite{}, Instrumental\cite{}, or TRSpectrometer\cite{}.
-
-yaqc [CITE] is a very basic Python client for yaq.
-yaqc is totally generic and aims to support any conceivable yaq daemon.
-This library is easy to use directly in Python scripts or interactively, but it's also very useful as a dependency when building more specialized Python clients.
-
-yaqc-qtpy [CITE] is a specialty Qt-based [CITE] GUI client.
-yaqc-qtpy provides a ``QClient'' object which uses Qt threading primatives to provide performant and safe access to yaq from a Qt environment.
-In addition, yaqc-qtpy provides a graphical application which automatically populates from arbitrary protocols using traits.
-This is an invaluable tool which provides a ``free'' graphical user interface to any daemon.
-
-
-Figure \ref{fig:foundation}...
-Cover scripts, fakes, escape hatches.
-non-excusivity
+A \yaq{} client can scale in complexity from a small, lightweight script all the way to a complicated graphical program, as shown in Figure \ref{fig:foundation}.
+At the bottom, the daemons lay a solid foundation to build the variety of clients on top of.
+Client sophistication can be introduced naturally, as novel experiments are tested and refined.
 
 \begin{figure}
+\includegraphics[width=\columnwidth]{figures/clients}
   \caption{  \label{fig:foundation} A caption}
 \end{figure}
 
 
-\section{Hardware Flexibility}
 
-Research groups tend to be understandably apprehensive about incorporating new hardware into their instrument.
-We previously discussed this issue from the perspective of orchestration and user interface, we now approach the same issue from the perspective of needing to master the new hardware interface itself.
-It is natural to focus more on excellent client experiences because client development is something that every \yaq{} user needs to become familiar with.
-A \yaq{} daemon needs only be implemented once for all instruments, while each specific experiment requires specific client implementation.
-We have worked to make daemon development simple where possible.
+Several general purpose \yaq{} clients exist.
+\texttt{yaqc}\cite{} is a lightweight Python client which is excellent for using in scripts or any other Python program.
+\texttt{yaqc} is totally generic and aims to support any conceivable \yaq{} daemon.
+\texttt{yaqc-qtpy}\cite{} is a graphical application which builds interactive controls based on traits for any conceivable \yaq{} protocol.
+This is an invaluable tool which provides a ``free'' graphical user interface to any daemon.
+\texttt{yaqc-bluesky}\cite{} provides a bridge to the Bluesky ecosystem\cite{}.
+Bluesky provides a powerful orchestration layer for conducting and recording data for a wide variety of experimental procedures.
+Similar translation layers could be built for a variety of orchestration layers such as PyMoDAQ\cite{}, Instrumental\cite{}, or TRSpectrometer\cite{}.
 
+The Landis Group at UW-Madison is currently working on a new type of flow reactor: the Wisconsin Quench Kinetics Reactor (WiQK).
+This reactor incorporates several computer-controlled valves and syringe pumps as well as various sensors.
+The set of hardware peripherals is rapidly changing as researchers continue to test and refine their design.
+Only a few researchers are actively using the reactor during this prototyping stage.
+These researchers are experimentalists who have limited background in software development.
+The Landis Group has written very basic Python scripts to orchestrate hardware for their reactor.
+These lightweight scripts can be extensively refactored by the experimentalists as the hardware and orchestration strategy changes dramatically during WiQK development.
+This approach ensures that the Landis Group is not slowed down by complex, inflexible orchestration software.
+Once the reactor is complete, more sophisticated graphical clients will be created to accommodate end users who were not involved as the reactor was built.
+
+The Wright Group at UW-Madison needs to orchestrate a large variety of hardware in multidimensional scans for their complex spectroscopy experiments \cite{MukamelShaul2000a, WrightJohnCurtis2011a}.
+This need for exquisite hardware control has resulted in several prior attempts at ``home-built'' orchestration software \cite{CarlsonRogerJohn1988a, MeyerKentAlbert2004b, KainSchuyler2017a, ThompsonBlaiseJonathan2018a}.
+Now, using \yaq{}, the Wright Group has been able to move to Bluesky rather than inventing their own sophisticated control software ``from scratch''.
+The Wright Group uses simulated hardware to enable client development away from the active laboratory computers.
+The same client is used on four laser systems, each with different complements of hardware.
+Moving forward, the Wright Group hopes to spend less energy developing control software and more energy developing creative spectroscopy experiments.
+
+
+
+\section{Incorporating New Hardware}
+
+In a \yaq{} context, new hardware can be incorporated into an instrument through the creation of a new daemon.
 The \yaq{} architecture automatically simplifies hardware interface development in several ways.
 First, because daemons are separate and portable programs, the development effort can be spread across the community of \yaq{} users.
 Second, \yaq{} daemon development can be performed separated from the particulars of any individual client.
@@ -217,6 +237,14 @@ Simple interfaces, such as Brooks MFC\cite{}, can be implemented in as little as
 Second, \texttt{yaq-traits}\cite{} is a command line application which allows the description of messages provided by a \yaq{} protocol to be written in a human-readable fashion and translated into a more fully described machine readable format.
 The format it generates is an important part of how \yaq{} protocols are self describing.
 This shields developers from the details of Apache Avro, which can be somewhat esoteric.
+
+The Stahl Group at UW-Madison created a custom reactor which monitors gasses being produced or consumed in the reaction head-space.  \cite{SalazarChaseA2021a}
+This reactor incorporates a collection of sensitive pressure transducers and a single heating process value under computer control.
+yaq daemons are used to interface with each sensor and the heater controller.
+Recently, experimentalists have been attempting reactions involving smaller, slower, pressure changes.
+A fundamental flaw in the initial analog to digital converter board was revealed by these attempts.
+As a result, a new digitizer has been purchased.
+This new converter will be incorporated into the existing reactor without modifying the existing graphical user interface and data recording program, minimizing downtime.
 
 
 \section{Technical Debt}
@@ -240,40 +268,14 @@ Because the temperature sensor daemon is its own independent program, both instr
 As \yaq{} grows, the "ecosystem" of existing daemons means that future instruments become easier and easier to develop.
 Growing this ecosystem is a collaborative effort where many \yaq{} users create portable daemons that they need and share them for the community to use and improve.
 
-There are currently 62 daemons in the yaq project supporting at least 40 kinds of hardware.
+There are currently XX daemons in the yaq project supporting at least YY kinds of hardware.
 Because yaq is protocol based, anyone can design and publish new daemons extending our hardware support.
 A living list of all daemons and supported hardware can be found on the yaq website.
 
 Software documentation is famously difficult and thankless work.
 \yaq{} attempts do automate daemon documentation as much as possible.
-Our website, \href{https://yaq.fyi}, automatically builds generated protocol reference pages for all known protocols.
+Our website, https://yaq.fyi, automatically builds generated protocol reference pages for all known protocols.
 These pages are automatically updated when new versions are published.
-
-
-\section{Case Studies}
-
-yaq's simplicity and extensible nature has allowed us to use it in a broad variety of instrumentation designs.
-We highlight a few such designs here.
-
-The Landis Group at UW-Madison is currently working on a new type of flow reactor: the Wisconsin Quench Kinetics Reactor (WiQK).
-This reactor incorporates several computer-controlled valves and syringe pumps as well as various sensors.
-The WiQK is rapidly evolving as researchers continue to test and refine their design.
-Only a few researchers are actively using the reactor during this prototyping stage.
-The Landis Group has written very basic Python scripts utilizing yaqc to orchestrate hardware for their reactor.
-These lightweight scripts can be extensively refactored as the hardware and orchestration strategy changes dramatically during WiQK development.
-This approach ensures that the Landis Group is not limited by their ability to orchestrate hardware as they refine their reactor design.
-
-The Stahl Group at UW-Madison created a custom reactor which monitors gasses being produced or consumed in the reaction head-space.  \cite{SalazarChaseA2021a}
-This reactor incorporates a collection of sensitive pressure transducers and a single heating process value under computer control.
-yaq daemons are used to interface with each sensor and the heater controller.
-We were able to create a lightweight Qt-based GUI which offers an easy user experience to researchers.
-By separating hardware interface code from GUI code, each piece of the system became easier to produce and maintain.
-Taken together, these components have been a solid software experience for many users over several years.
-
-The Wright Group at UW-Madison needs to orchestrate a large variety of hardware in multidimensional scans for their complex spectroscopy experiments \cite{MukamelShaul2000a, WrightJohnCurtis2011a}.
-This need for exquisite hardware control has resulted in several prior attempts at ``home-built'' orchestration software \cite{CarlsonRogerJohn1988a, MeyerKentAlbert2004b, KainSchuyler2017a, ThompsonBlaiseJonathan2018a}.
-Now, using yaq, the Wright Group has been able to move to Bluesky rather than inventing their own sophisticated control software ``from scratch''.
-Moving forward, the Wright Group hopes to spend less energy developing control software and more energy developing creative spectroscopy experiments.
 
 yaq is also being used in several smaller ways throughout UW-Madison Chemistry.
 Excitingly, all of these research groups are able easily benefit from each-other's daemon developments.
