--- a/paper.tex
+++ b/paper.tex
@@ -28,8 +28,11 @@
 
 \preprint{AIP/123-QED}
 
-\title{The yaq Project: \\ Another Protocol for Scientific Instrumentation}
+\title{The yaq Project: \\ A Protocol for Scientific Instrumentation}
 \author{Kyle F. Sunden}
+\author{Daniel D. Kohler}
+\author{Peter C. Parilla}
+\author{Kent A. Meyer}
 \author{John C. Wright}
 \author{Blaise J. Thompson}
 \affiliation{
