--- a/references.bib
+++ b/references.bib
@@ -1,127 +1,3 @@
-@phdthesis{MeyerKentAlbert2004b,
-  author =	 {Kent Albert Meyer},
-  title =	 {Freqncy-Scanned Ultrafast Spectroscopic Techniques
-                  Applied to Infrared Four-Wave Mixing Spectroscopy},
-  school =	 {University of Wisconsin--Madison},
-  year =	 2004,
-}
-
-@phdthesis{CarlsonRogerJohn1988a,
-  author =       {Roger John Carlson},
-  school =       {University of Wisconsin-Madison},
-  title =        {Quantitative Aspects of High Resolution, Fully Resonant, Four-Wave Mixing
-                  Spectroscopy For the Analysis of Vibronic Mode Coupling in Molecules},
-  year =         1988,
-}
-
-@phdthesis{ThompsonBlaiseJonathan2018a,
-  author =	 {Thompson, Blaise Jonathan},
-  title =	 {Development of Frequency Domain Multidimensional
-                  Spectroscopy with Applications in Semiconductor
-                  Photophysics},
-  school =	 {University of Wisconsin--Madison},
-  year =	 2018,
-}
-
-@phdthesis{KainSchuyler2017a,
-  author =	 {Kain, Schuyler},
-  title =	 {Transition of Frequency-Domain Coherent
-                  Multidimensional Spectroscopic Methods to the
-                  Femtosecond Time Regime with Applications to
-                  Nanoscale Semiconductors},
-  school =	 {University of Wisconsin--Madison},
-  year =	 2017,
-}
-
-@article{AllanDanielB2019a,
-  doi =		 {10.1080/08940886.2019.1608121},
-  year =	 2019,
-  month =	 may,
-  publisher =	 {Informa {UK} Limited},
-  volume =	 32,
-  number =	 3,
-  pages =	 {19--22},
-  author =	 {Daniel Allan and Thomas Caswell and Stuart Campbell
-                  and Maksim Rakitin},
-  title =	 {Bluesky{\textquotesingle}s Ahead: A Multi-Facility
-                  Collaboration for an a la Carte Software Project for
-                  Data Acquisition and Management},
-  journal =	 {Synchrotron Radiation News}
-}
-
-@article{DalesioLR1991a,
-  author =	 {Dalesio, L. R. and Kraimer, M. R. and Kozubal,
-                  A. J.},
-  title =	 {EPICS Architecture},
-  jouranl =	 {ICALEPCS},
-  volume =	 91,
-  year =	 1991,
-}
-
-@article{MukamelShaul2000a,
-  author =	 {Mukamel, Shaul},
-  title =	 {Multidimensional Femtosecond Correlation
-                  Spectroscopies of Electronic and Vibrational
-                  Excitations},
-  journal =	 {Annual Review of Physical Chemistry},
-  year =	 2000,
-  volume =	 51,
-  number =	 1,
-  pages =	 {691--729},
-  month =	 oct,
-  url =		 {https://doi.org/10.1146/annurev.physchem.51.1.691},
-  doi =		 {10.1146/annurev.physchem.51.1.691},
-  publisher =	 {Annual Reviews},
-}
-
-@article{SalazarChaseA2021a,
-  doi =		 {10.1063/5.0043007},
-  year =	 2021,
-  month =	 apr,
-  publisher =	 {{AIP} Publishing},
-  volume =	 92,
-  number =	 4,
-  pages =	 044103,
-  author =	 {Chase A. Salazar and Blaise J. Thompson and Spring
-                  M. M. Knapp and Steven R. Myers and Shannon
-                  S. Stahl},
-  title =	 {Multichannel gas-uptake/evolution reactor for
-                  monitoring liquid-phase chemical reactions},
-  journal =	 {Review of Scientific Instruments}
-}
-
-@article{WeberSebastien2021a,
-  doi =		 {10.1063/5.0032116},
-  year =	 2021,
-  month =	 apr,
-  publisher =	 {{AIP} Publishing},
-  volume =	 92,
-  number =	 4,
-  pages =	 045104,
-  author =	 {S. J. Weber},
-  title =	 {{PyMoDAQ}: An open-source Python-based software for
-                  modular data acquisition},
-  journal =	 {Review of Scientific Instruments}
-}
-
-@article{WrightJohnCurtis2011a,
-  author =	 {Wright, John C.},
-  title =	 {Multiresonant Coherent Multidimensional
-                  Spectroscopy},
-  journal =	 {Annual Review of Physical Chemistry},
-  year =	 2011,
-  volume =	 62,
-  number =	 1,
-  pages =	 {209--230},
-  month =	 may,
-  doi =		 {10.1146/annurev-physchem-032210-103551},
-}
-
-@misc{tango-controls.org,
-  title =	 {TANGO Controls},
-  date =	 {2022-04-01},
-  url =		 {https://www.tango-controls.org/}
-}
 @inproceedings{AGotz1999TANGOA,
  author = {Chaize, J-M. and G¨otz, A. and Meyer, J. and Pérez, María and Taurel, E.},
  title = {TANGO - AN OBJECT ORIENTED CONTROL SYSTEM BASED ON CORBA},
@@ -173,12 +49,47 @@ Data Acquisition and Management},
  doi = {10.1080/08940886.2017.1289810}
 }
 
+@misc{AvroSpecification,
+ title = {Apache Avro Specification},
+ url = {https://avro.apache.org/docs/1.11.1/specification/},
+ note = {Accessed: 2022-10-02}
+}
+
+@misc{Bogdanowicz2022,
+ author = {Bogdanowicz, Nate and Rogers, Christopher and Weber, Sébastien and Zakv,  and Pelissier, Sylvain and Wheeler, Jonathan and Cxz,  and Marazzi, Francesco and Eedm,  and Galinskiy, Ivan},
+ title = {mabuchilab/Instrumental: 0.7},
+ publisher = {Zenodo},
+ year = {2022},
+ url = {https://zenodo.org/record/2556398},
+ doi = {10.5281/ZENODO.2556398},
+ copyright = {Open Access}
+}
+
+@phdthesis{CarlsonRogerJohn1988a,
+ author = {Carlson, Roger John},
+ title = {Quantitative Aspects of High Resolution, Fully
+Resonant, Four-Wave Mixing Spectroscopy For the
+Analysis of Vibronic Mode Coupling in Molecules},
+ year = {1988},
+ school = {University of Wisconsin-Madison}
+}
+
 @article{DalesioLR1991a,
  author = {Dalesio, L. R. and Kraimer, M. R. and Kozubal, A. J.},
  title = {EPICS Architecture},
  year = {1991},
  volume = {91},
  jouranl = {ICALEPCS}
+}
+
+@phdthesis{KainSchuyler2017a,
+ author = {Kain, Schuyler},
+ title = {Transition of Frequency-Domain Coherent
+Multidimensional Spectroscopic Methods to the
+Femtosecond Time Regime with Applications to
+Nanoscale Semiconductors},
+ year = {2017},
+ school = {University of Wisconsin-Madison}
 }
 
 @article{Koerner_2019,
@@ -224,6 +135,110 @@ Data Acquisition and Management},
  language = {en}
 }
 
+@article{MeyerKentAlbert2004a,
+ author = {Meyer, Kent A and Wright, John C. and Thompson, David E},
+ title = {Frequency and Time-Resolved Triply Vibrationally
+Enhanced Four-Wave Mixing Spectroscopy Frequency and
+Time-Resolved Triply Vibrationally Enhanced
+Four-Wave Mixing Spectroscopy},
+ journal = {The Journal of Physical Chemistry A},
+ year = {2004},
+ month = {December},
+ number = {52},
+ volume = {108},
+ pages = {11485--11493},
+ doi = {10.1021/jp046137j}
+}
+
+@manual{modbus,
+ title = {MODBUS APPLICATION PROTOCOL SPECIFICATION},
+ year = {2012},
+ organization = {Modbus},
+ version = {V1.1b3}
+}
+
+@article{MukamelShaul2000a,
+ author = {Mukamel, Shaul},
+ title = {Multidimensional Femtosecond Correlation Spectroscopies of
+Electronic and Vibrational Excitations},
+ journal = {Annual Review of Physical Chemistry},
+ publisher = {Annual Reviews},
+ year = {2000},
+ month = {oct},
+ number = {1},
+ volume = {51},
+ pages = {691--729},
+ url = {https://doi.org/10.1146/annurev.physchem.51.1.691},
+ doi = {10.1146/annurev.physchem.51.1.691}
+}
+
+@misc{nidaqmx,
+ title = {Getting Started with NI-DAQmx},
+ url = {https://www.ni.com/en-us/support/documentation/supplemental/06/getting-started-with-ni-daqmx--main-page.html},
+ note = {Accessed: 2022-10-02}
+}
+
+@manual{picam,
+ title = {PICam™ 5.x Programmer’s Manual},
+ year = {2021},
+ issue = {12},
+ organization = {Teledyne Princeton Instruments}
+}
+
+@book{Raymond_1996,
+ title = {The new hacker’s dictionary},
+ publisher = {MIT Press},
+ year = {1996},
+ address = {Cambridge, Mass},
+ callnumber = {PN6231.E4 H3 1996},
+ edition = {3rd ed},
+ isbn = {9780262181785}
+}
+
+@article{SalazarChaseA2021a,
+ author = {Salazar, Chase A. and Thompson, Blaise J. and Knapp, Spring M. M. and Myers, Steven R. and Stahl, Shannon S.},
+ title = {Multichannel gas-uptake/evolution reactor for
+monitoring liquid-phase chemical reactions},
+ journal = {Review of Scientific Instruments},
+ publisher = {AIP Publishing},
+ year = {2021},
+ month = {April},
+ number = {4},
+ volume = {92},
+ pages = {044103},
+ doi = {10.1063/5.0043007}
+}
+
+@manual{scpi,
+ title = {Standard Commands for Programmable Instruments (SCPI)},
+ year = {1999},
+ organization = {SCPI Consortium},
+ version = {1999.0}
+}
+
+@phdthesis{ThompsonBlaiseJonathan2018a,
+ author = {Thompson, Blaise Jonathan},
+ title = {Development of Frequency Domain Multidimensional
+Spectroscopy with Applications in Semiconductor
+Photophysics},
+ year = {2018},
+ school = {University of Wisconsin--Madison}
+}
+
+@manual{thorlabs_apt,
+ title = {Thorlabs Motion Controllers Host-Controller Communications Protocol},
+ year = {2022},
+ issue = {31},
+ organization = {Thorlabs, GmbH}
+}
+
+@misc{trspectrometer,
+ author = {Tapping, Patrick},
+ title = {TRSpectrometer},
+ url = {https://trspectrometer.readthedocs.io/en/latest/},
+ note = {Accessed: 2022-10-02}
+}
+
 @article{WeberSebastien2021a,
  author = {Weber, S. J.},
  title = {PyMoDAQ: An open-source Python-based software for
@@ -236,6 +251,60 @@ modular data acquisition},
  volume = {92},
  pages = {045104},
  doi = {10.1063/5.0032116}
+}
+
+@article{WrightJohnCurtis2011a,
+ author = {Wright, John C.},
+ title = {Multiresonant Coherent Multidimensional Spectroscopy},
+ journal = {Annual Review of Physical Chemistry},
+ year = {2011},
+ month = {may},
+ number = {1},
+ volume = {62},
+ pages = {209--230},
+ doi = {10.1146/annurev-physchem-032210-103551}
+}
+
+@misc{yaq-traits,
+ title = {yaq-traits},
+ url = {https://pypi.org/project/yaq-traits},
+ note = {Accessed: 2022-10-02}
+}
+
+@misc{yaqc,
+ title = {yaqc},
+ url = {https://pypi.org/project/yaqc},
+ note = {Accessed: 2022-10-02}
+}
+
+@misc{yaqc-bluesky,
+ title = {yaqc-bluesky},
+ url = {https://pypi.org/project/yaqc-bluesky},
+ note = {Accessed: 2022-10-02}
+}
+
+@misc{yaqc-qtpy,
+ title = {yaqc-qtpy},
+ url = {https://pypi.org/project/yaqc-qtpy},
+ note = {Accessed: 2022-10-02}
+}
+
+@misc{yaqd-brooks-mfc,
+ title = {yaqd-brooks-mfc-gf source code},
+ url = {https://github.com/yaq-project/yaqd-brooks/blob/7cc1de/yaqd_brooks/_brooks_mfc_gf.py},
+ note = {Accessed: 2022-10-02}
+}
+
+@misc{yaqd-core-python,
+ title = {yaqd-core},
+ url = {https://pypi.org/project/yaqd-core},
+ note = {Accessed: 2022-10-02}
+}
+
+@misc{yaqd-fakes,
+ title = {yaqd-fakes},
+ url = {https://pypi.org/project/yaqd-fakes},
+ note = {Accessed: 2022-10-02}
 }
 
 
