--- a/paper.tex
+++ b/paper.tex
@@ -71,7 +71,7 @@ These projects are impressive at facility scale, but in our experience these do 
 As smaller research labs have grown in experimental complexity, many individual labs have created domain-specific orchestration software.
 Most small custom research instrumentation continues to rely on monolithic software which has hardcorded protocol support for each particular connected device.
 These monolithic applications tend to be very inflexible and difficult to develop.
-In the last few years, several open source projects by-and-for small-scale experimentalists have grown in popularity [CITE many].
+In the last few years, several open source projects by-and-for small-scale experimentalists have grown in popularity\cite{WeberSebastien2021a,Bogdanowicz2022,trspectrometer,Koerner_2019,Campagnola_2014,pymeasure}.
 While this growth is encouraging, many of these are limited by their focus on particular types of hardware or particular experimental domains.
 To our knowledge, none of these projects take a strict protocol-based approach.
 
