--- a/references.bib
+++ b/references.bib
@@ -65,6 +65,17 @@ Data Acquisition and Management},
  copyright = {Open Access}
 }
 
+@article{Campagnola_2014,
+ author = {Campagnola, Luke and Kratz, Megan B. and Manis, Paul B.},
+ title = {ACQ4: an open-source software platform for data acquisition and analysis in neurophysiology research},
+ journal = {Frontiers in Neuroinformatics},
+ publisher = {Frontiers Media SA},
+ year = {2014},
+ volume = {8},
+ url = {https://doi.org/10.3389%2Ffninf.2014.00003},
+ doi = {10.3389/fninf.2014.00003}
+}
+
 @phdthesis{CarlsonRogerJohn1988a,
  author = {Carlson, Roger John},
  title = {Quantitative Aspects of High Resolution, Fully
@@ -183,6 +194,12 @@ Electronic and Vibrational Excitations},
  year = {2021},
  issue = {12},
  organization = {Teledyne Princeton Instruments}
+}
+
+@misc{pymeasure,
+ title = {PyMeasure scientific package},
+ url = {https://pymeasure.readthedocs.io/},
+ note = {Accessed: 2022-10-02}
 }
 
 @book{Raymond_1996,
